force-app/main/default/objects/Public_Event__c/Public_Event__c.object-meta.xml
<CustomObject>
    <label>Public Event</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Public Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>