force-app/main/default/objects/Public_Event__c/fields/Date_End__c.field-meta.xml
<CustomField>
    <fullName>Date_End__c</fullName>
    <label>Date_End</label>
    <length>10</length>
    <type>Text</type>
</CustomField>