force-app/main/default/objects/Public_Event__c/fields/Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Start__c</fullName>
    <label>Date_Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>