force-app/main/default/objects/Public_Event__c/fields/Main_Venue__c.field-meta.xml
<CustomField>
    <fullName>Main_Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Public Events</relationshipLabel>
    <relationshipName>Public_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>