force-app/main/default/objects/Public_Event__c/fields/Number_of_Registered_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registered_Attendee__c</fullName>
    <description>Number of attendee who have registered for the event</description>
    <label>Number of Registered Attendee</label>
    <summaryFilterItems>
        <field>Event_Registration__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registration__c.Public_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>