force-app/main/default/objects/Public_Event__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Total Revenue for the event.</description>
    <label>Revenue</label>
    <summarizedField>Event_Registration__c.Registration_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Event_Registration__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registration__c.Public_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>