force-app/main/default/objects/Public_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dreamforce</fullName>
            </value>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>World Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>