force-app/main/default/objects/Public_Event__c/validationRules/Start_Date_is_not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_is_not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Start_Date__c )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please fill out Start Date Field!</errorMessage>
</ValidationRule>