force-app/main/default/objects/Public_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Revenue__c</columns>
    <columns>Number_of_Registered_Attendee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>